# CMake-codecov

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  run_test.sh
.github/workflows/: ci.yml
cmake/: FindGcov.cmake  FindGcovr.cmake  FindLcov.cmake  Findcodecov.cmake  Findgcov.cmake  llvm-cov-wrapper
src/: CMakeLists.txt
src/bar/: CMakeLists.txt  bar.c
src/fortran/: CMakeLists.txt  hello.f
src/libfoo/: CMakeLists.txt  bar.c  foo.c  foo.h
src/libheader/: CMakeLists.txt  header.h
